--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1>Sobre a Barbearia Alura</h1>
+<h1>Sobre a Barbearia Alvez</h1>
 
 <p>Localizada na Avenida Costa e Silva 1199, com ótimos profissionais para tratar do seu cabelo e barba!</p>
 
