--- a/index.html
+++ b/index.html
@@ -1,9 +1,43 @@
-<h1>Sobre a Barbearia Alvez</h1>
-
-<p>Localizada na Avenida Costa e Silva 1199, com ótimos profissionais para tratar do seu cabelo e barba!</p>
-
-<p>Nossa missão é proporcionar um ambiente de qualidade com a elevação da sua autoestima após o corte</p>
-
-<p>Oferecemos café, comidas variadas enquanto o cliente espera a sua vez de corte de cabelo</p>
-
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Empório das Bebidas</title>
+</head>
+<body>
+  <header>
+    <h1>Disk Bebidas</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Início</a></li>
+        <li><a href="#">Serviços</a></li>
+        <li><a href="#">Sobre Nós</a></li>
+        <li><a href="#">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+  <section class="intro">
+    <h2>Bem-vindo ao nosso Disk Bebidas!</h2>
+    <p>Oferecemos as melhores e mais variadas bebidas, pods entre outros produtos.</p>
+    <a href="#" class="btn">Venha conhecer agora!</a>
+  </section>
+  <section class="services">
+    <h2>Nossos Serviços</h2>
+    <div class="service">
+      <img src="pF7Y9R.webp" alt="Nossa recepção">
+      <h3>Qual a sua preferida?</h3>
+      <p>Oferecemos bebidas modernas e clássicas.</p>
+    </div>
+    <div class="service">
+      <img src="images.png" alt="Empório das Bebidas">
+      <h3>Lazer</h3>
+      <p>Temos área de lazer, sinuca, jogos e muito mais!.</p>
+    </div>
+  </section>
+  <footer>
+    <p>&copy; 2023 Barbearia Exemplo. Todos os direitos reservados.</p>
+  </footer>
+</body>
+</html>
